online-game-page-add

--- a/index.html
+++ b/index.html
@@ -29,9 +29,55 @@
             </div>
     </nav>
     <!-- header-page-nav-bar -->
+    <section>
+        <!-- Header-page-add -->
+        <div class="header-page">
+            <div class="header-page-left">
+                <h3 class="header-page-title">Play Like The</h3>
+                <h1 class="header-page-title-2" >G.O.A.T.</h1>
+                <h6 class="header-page-txt">1-Click instant play</h6>
+                <h6 class="header-page-txt">No Download</h6>
+                <h6 class="header-page-txt">1000s of supported online games</h6>
+                <div class="header-page-button-div">
+                    <button class="btn-1">Sign In</button>
+                    <button class="btn-2">Go Rogue</button>
+                </div>
+
+            </div>
+            <div class="header-page-right">
+                <img class="header-image" src="./images/Group 18.png" alt="">
+
+            </div>
+        </div>
+        <!-- Header-page-add -->
+    </section>
     
     </header>
     <main>
+
+        <section class="online-games">
+            <h1 class="online-games-title">Online Games <span class="online-game-title-style">Funny Videos</span></h1>
+            <h3 class="online-games-para">A Collection of Hilarious Videos to Brighten Your Day</h3>
+            <div class="online-games-container">
+                <div class="box">
+                    <img class="online-games-containt-img" src="./images/Rectangle 4.png" alt="">
+                    <h6 class="online-games-img-footer">No Download. No Installs. Play games Instantly on Gamer.</h6>
+                </div>
+                <div class="box">
+                    <img class="online-games-containt-img" src="./images/Rectangle 5.png" alt="">
+                    <h6>Did you score? #unblockedgames #school</h6>
+                </div>
+                <div class="box">
+                    <img class="online-games-containt-img" src="./images/Rectangle 7.png" alt="">
+                    <h6>Breaking game records like OG</h6>
+                </div>
+                <div class="box">
+                    <img class="online-games-containt-img" src="./images/Rectangle 6.png" alt="">
+                    <h6>Busted gaming on school laptop, but you are still lit.</h6>
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
