play-instantly-page-add

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     
     </header>
     <main>
+        <!-- online-game-page -->
 
         <section class="online-games">
             <h1 class="online-games-title">Online Games <span class="online-game-title-style">Funny Videos</span></h1>
@@ -78,6 +79,33 @@
             </div>
 
         </section>
+        <!-- online-game-page -->
+
+
+        <!-- play-games-online -->
+        <section class="play-games">
+            <div class="play-games-left">
+                <h1 class="play-games-heading"><span class="online-game-title-style">Play Instantly,</span><br>
+                    No Downloads <br>
+                    No Installs.</h1>
+                    <p class="play-games-para">Play games online for free</span> without downloading. Just click <br> the Play button and play instantly in your browser.</p>
+
+            </div>
+            <div class="play-games-right">
+                <img class="play-games-img1" src="/images/Rectangle 55.png" alt="">
+                <img class="play-games-img2" src="/images/Rectangle 66.png" alt="">
+
+            </div>
+
+        </section>
+
+
+
+         <!-- play-games-online -->
+
+
+
+
 
     </main>
     <footer>
