--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
             </div>
             <div class="play-games-right">
-                <img class="play-games-img1" src="/images/Rectangle 55.png" alt="">
-                <img class="play-games-img2" src="/images/Rectangle 66.png" alt="">
+                <img class="play-games-img1" src="./images/Rectangle 55.png" alt="">
+                <img class="play-games-img2" src="./images/Rectangle 66.png" alt="">
 
             </div>
 
