button-page-add

--- a/index.html
+++ b/index.html
@@ -102,6 +102,62 @@
 
 
          <!-- play-games-online -->
+         <section class="button-page">
+            <div>
+                <button class="button-page-btn-1"><img src="./images/Rectangle 11.png" alt="">
+                    <h6 class="button-title">Action Games</h6>
+                </button>
+
+            </div>
+            <div>
+                <button class="button-page-btn-1"><img src="./images/Rectangle 12.png" alt="">
+                    <h6 class="button-title">Adventure Games</h6>
+                </button>
+
+            </div>
+            <div>
+                <button class="button-page-btn-1"><img src="./images/Rectangle 13.png" alt="">
+                    <h6 class="button-title">Arcade Games</h6>
+                </button>
+
+            </div>
+            <div>
+                <button class="button-page-btn-1"><img src="./images/Rectangle 14.png" alt="">
+                    <h6 class="button-title">Educational Games</h6>
+                </button>
+
+            </div>
+            <div>
+                <button class="button-page-btn-1"><img src="./images/Rectangle 15.png" alt="">
+                    <h6 class="button-title">Word Games</h6>
+                </button>
+
+            </div>
+            <div>
+                <button class="button-page-btn-1"><img src="./images/Rectangle 16.png" alt="">
+                    <h6 class="button-title">Role Palying Games</h6>
+                </button>
+
+            </div>
+            <div>
+                <button class="button-page-btn-1"><img src="./images/Rectangle 17.png" alt="">
+                    <h6 class="button-title">Music & Audio Games</h6>
+                </button>
+
+            </div>
+            <div>
+                <button class="button-page-btn-1"><img src="./images/Rectangle 18.png" alt="">
+                    <h6 class="button-title">Puzzle Games</h6>
+                </button>
+
+            </div>
+            <div>
+                <button class="button-page-btn-1"><img src="./images/Rectangle 11.png" alt="">
+                    <h6 class="button-title">Strategy Games</h6>
+                </button>
+
+            </div>
+         </section>
 
 
 
