--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="icon" href="./images/Frame.png">
@@ -7,25 +8,29 @@
     <title>BBA2-GAMER</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- header-page-nav-bar -->
     <nav>
         <header class="header">
             <div class="header-div-1">
-             <img class="header-icon" src="./images/Frame.png" alt="">
-             <h1 class="heading-1">Gamer</h1>
- 
+                <img class="header-icon" src="./images/Frame.png" alt="">
+                <h1 class="heading-1"><span class="online-game-title-style">G</span>amer</h1>
+
             </div>
             <div class="header-div-2">
-             <h1 class="div-2-content">About Us</h1>
-             <h1 class="div-2-content">Developer</h1>
-             <div class="header-button">
-                 <h6>Follow Us On</h6>
-                 <i class="fa-brands fa-youtube" style="color: red;"></i>
-                 <i class="fa-brands fa-tiktok"></i>
-             </div>
- 
+                <h1 class="div-2-content">About Us</h1>
+                <h1 class="div-2-content">Developer</h1>
+                <div class="header-button">
+                    <h6>Follow Us On</h6>
+                    <i class="fa-brands fa-youtube" style="color: red;"></i>
+                    <i class="fa-brands fa-tiktok"></i>
+                </div>
+
             </div>
     </nav>
     <!-- header-page-nav-bar -->
@@ -34,7 +39,7 @@
         <div class="header-page">
             <div class="header-page-left">
                 <h3 class="header-page-title">Play Like The</h3>
-                <h1 class="header-page-title-2" >G.O.A.T.</h1>
+                <h1 class="header-page-title-2">G.O.A.T.</h1>
                 <h6 class="header-page-txt">1-Click instant play</h6>
                 <h6 class="header-page-txt">No Download</h6>
                 <h6 class="header-page-txt">1000s of supported online games</h6>
@@ -51,7 +56,7 @@
         </div>
         <!-- Header-page-add -->
     </section>
-    
+
     </header>
     <main>
         <!-- online-game-page -->
@@ -88,7 +93,8 @@
                 <h1 class="play-games-heading"><span class="online-game-title-style">Play Instantly,</span><br>
                     No Downloads <br>
                     No Installs.</h1>
-                    <p class="play-games-para">Play games online for free</span> without downloading. Just click <br> the Play button and play instantly in your browser.</p>
+                <p class="play-games-para">Play games online for free</span> without downloading. Just click <br> the
+                    Play button and play instantly in your browser.</p>
 
             </div>
             <div class="play-games-right">
@@ -101,8 +107,12 @@
 
 
 
-         <!-- play-games-online -->
-         <section class="button-page">
+        <!-- play-games-online -->
+
+
+        <!-- button-page -->
+
+        <section class="button-page">
             <div>
                 <button class="button-page-btn-1"><img src="./images/Rectangle 11.png" alt="">
                     <h6 class="button-title">Action Games</h6>
@@ -157,7 +167,9 @@
                 </button>
 
             </div>
-         </section>
+        </section>
+
+        <!-- button-page -->
 
 
 
@@ -165,8 +177,43 @@
 
     </main>
     <footer>
+        <section class="footer">
+            <div class="footer-div">
+                <div class="div-1">
+                    <img src="./images/Frame.png" alt="">
+                    <h1 class="footer-title"><span class="online-game-title-style">G</span>amer</h1>
+                </div>
+                <div class="div-2">
+                    <div>Our Story</div>
+                    <div>Games</div>
+                    <div>Web Games</div>
+                    <div>Careers</div>
+                    <div>Support</div>
+                    <div>My Account</div>
+                </div>
+                <div class="div-3">
+                    <button class="fotter-icon"><i class="fa-brands fa-twitter" style="color: blue;"></i></button>
+                    <button class="fotter-icon"><i class="fa-brands fa-facebook" style="color: blue;"></i></button>
+                    <button class="fotter-icon"><i class="fa-brands fa-youtube" style="color: red;"></i></button>
+                    <button class="fotter-icon"><i class="fa-brands fa-instagram" style="color: brown;"></i></button>
+                </div>
+                <div class="div-4">
+                    <div>
+                        <h4>Terms and Conditions</h4>
+                    </div>
+                    <div>
+                        <h4>Privacy Policy</h4>
+                    </div>
+                    <div>Cookie Policy</div>
+                    <div>Privacy Settings</div>
+                </div>
+                <h6 class="footer-last-line">Play Games  &#169 Gamer 2000-2023 Gamer Bangladesh</h6>
+
+            </div>
+        </section>
 
     </footer>
-    
+
 </body>
+
 </html>
