hover-add-image

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
                 <div class="box">
                     <img class="online-games-containt-img" src="./images/Rectangle 4.png" alt="">
                     <h6 class="online-games-img-footer">No Download. No Installs. Play games Instantly on Gamer.</h6>
+                    
+
                 </div>
                 <div class="box">
                     <img class="online-games-containt-img" src="./images/Rectangle 5.png" alt="">
@@ -76,6 +78,16 @@
                 <div class="box">
                     <img class="online-games-containt-img" src="./images/Rectangle 7.png" alt="">
                     <h6>Breaking game records like OG</h6>
+                    
+                    <!-- hover -->
+                    <div class="hover-containt">
+                        <h5>Play this</h5>
+                        <i class="fa-solid fa-play"></i>
+                    </div>
+
+
+                     <!-- hover -->
+
                 </div>
                 <div class="box">
                     <img class="online-games-containt-img" src="./images/Rectangle 6.png" alt="">
